Sun Nov 16 20:01:06 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: should access
	  file-local gvar directly (with @GOTOFF) in PIE.

	* net/loveruby/cflat/ast/Entity.java: all entities should have
	  memref or address.

	* net/loveruby/cflat/ast/Variable.java: ditto.

	* net/loveruby/cflat/ast/DefinedVariable.java: ditto.

	* net/loveruby/cflat/ast/UndefinedVariable.java: ditto.

	* net/loveruby/cflat/ast/Function.java: ditto.

	* net/loveruby/cflat/ast/DefinedFunction.java: ditto.

	* import/stdlib.hb: add new declarations.

	* import/unistd.hb: add new declarations.

Sun Nov  2 18:27:01 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: new option
	  --readonly-plt.

Sun Oct 26 07:04:53 2008  Minero Aoki  <aamine@loveruby.net>

	* bin/cbc: resolve symbolic link to command file.

Sat Oct 25 03:40:16 2008  Minero Aoki  <aamine@loveruby.net>

	* name code symbols lazily.

	* separate Label and Symbol.

	* net/loveruby/cflat/compiler/CodeGenerator.java: use Symbol
	  instead of Label for entity symbol.

	* net/loveruby/cflat/asm/Symbol.java: new interface.

	* net/loveruby/cflat/asm/BaseSymbol.java: new class.

	* net/loveruby/cflat/asm/NamedSymbol.java: new class.

	* net/loveruby/cflat/asm/SuffixedSymbol.java: new class.

	* net/loveruby/cflat/asm/UnnamedSymbol.java: new class.

	* net/loveruby/cflat/asm/SymbolTable.java: new class.

	* net/loveruby/cflat/asm/*.java: Label -> Symbol.

	* net/loveruby/cflat/asm/LabelRef.java: removed.

	* net/loveruby/cflat/ast/*.java: Label -> Symbol.

	* net/loveruby/cflat/parser/Parser.jj: does not pass a LabelPool
	  anymore.

Fri Oct 24 23:03:26 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/*.java: minimize references to asm/*.

Mon Sep 29 03:46:51 2008  Minero Aoki  <aamine@loveruby.net>

	* convert all source codes to Java 5 using generics and foreach
	  stmt.

Sun Sep 28 07:19:43 2008  Minero Aoki  <aamine@loveruby.net>
