@@ -1,3 +1,9 @@
+Sun Nov 16 20:10:59 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/CodeGenerator.java (compileAST):
+	  should not generate .data section when no global variable is
+	  defined.
+
 Sun Nov 16 20:01:06 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/CodeGenerator.java: should access
